# scaling-octo-fortnight

./: .gitignore  BUG.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  PROMPT.md  PROMPT_HANDOFF.md  README.md  SPONSORS.md  capsules.json  current.md  doppler.yaml  index.html  principles.aaryan-full.json  principles.json  principles.selin.json  pyproject.toml  server.js
.claude/skills/: connect_to_slack.md  setup_doppler.md  update-progress.md
.github/workflows/: deploy-ui.yml
backend_viz/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
backend_viz/public/: demo_data.json
backend_viz/src/: App.tsx  ForwardPass.tsx  LadderScene.tsx  SentryStory.tsx  TracePanel.tsx  WindowingScene.tsx  graph.ts  main.tsx  styles.css  types.ts
context/: DEMO.md  slack_summary_after_design_doc.md  team-questions-and-answers.md  team_transcript.md  team_trasncript_2.md  unified-design-doc-v2.docx
data/: Design Doc v0.docx  artist_vibes.json  comments.docx  design-doc.docx  photo_vision_cache.json  principles.json  principles.v1.json  transcript.md
data/derek_handoff/: SCHEMA.md  build_sample.py  export_principles_json.py  gen_capsules.py  verify_sample.py
design/: TIME_CAPSULE_FLYWHEEL.md
docs/: PIPELINE_FLOW.md  PRINCIPLES_UI_INTEGRATION_PLAN.md  TEMPORAL_SAMPLING_DESIGN.md  api-contract.md  call-graph.md  eda-findings.md  enrichment-contract.md  principle-traceback-agent.md  raw-to-principles-research.md  redis-vs-hindsight.md  rung3-minting-strategy.md  store-events-table-reconciliation.md  v0-pipeline-contract.md  youtube-music-adapter.md
media/3ddaa93d4bf336af/: 2a9457af457997ee.txt
media/9cdae79b56e09457/: a7681eb4bc666c86.txt
media/a6a22be142de178e/: d6026e8cb84400f0.txt
media/e12a463bccf7fa99/: 7941c3f6866a28e1.txt
poc_demo/: README.md
poc_demo/server/: app.py  capsule_app.py  capsules.py  data.py
poc_demo/web/: vite.config.ts
scripts/: bootstrap.sh  build_all_sources_db.py  build_demo_data.py  build_expansive_db.py  dump_bank.py  eda_bank.py  exp_full_recall_mint.py  link_principles.py  load_principles_db.py  load_sample_json.py  mint_principles.py  retain_slice.py  sentry_dashboard.py  sentry_smoke.py  show_bank.py  smoke_hindsight.py
src/: cli.py
src/adapters/: imessage.py  llm_chats.py  photos.py  spotify.py
src/adaptors/: _persist.py  imessage.py  llm_chats.py  photos.py  spotify.py
src/core/: capsule.py  logging.py  principle.py  schema.py
src/models/: photo.py  (+4 more)
tests/: test_auth_gate.py  test_capsule_api.py  test_capsule_service.py  test_capsule_store.py  test_chat_event.py  test_cli.py  test_episodes.py  test_imessage_adapter.py  test_ingest.py  test_llm_chats.py  test_llm_export.py  test_llm_store.py  test_llm_to_event.py  test_load.py  test_persist.py  test_photo_store.py  test_photo_to_event.py  test_photos.py  test_principles_api.py  test_show.py  test_smoke.py  test_spotify_adapter.py
ui/: README.md  api.js  app.js  index.html  manifest.json  seed.js  styles.css
(+62 files in other folders)
