[project]
name = "recall"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "hindsight-api-slim[embedded-db]",
    "hindsight-client",
    "pydantic>=2",
    "python-dotenv",
]

[project.scripts]
recall = "recall.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recall", "src/models", "src/adaptors", "src/db"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ty.rules]
unresolved-import = "error"
invalid-argument-type = "error"
invalid-assignment = "error"
invalid-return-type = "error"
missing-argument = "error"
unresolved-attribute = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
